--- a/client/package.json
+++ b/client/package.json
@@ -9,17 +9,27 @@
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
     "@apollo/client": "^3.7.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.43",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "antd": "^5.0.0",
     "bulma": "^0.9.3",
     "eslint": "^8.28.0",
     "graphql": "^16.6.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "source-map-loader": "^4.0.1",
+    "ts-loader": "^9.4.4",
+    "typescript": "^4.9.5"
   },
   "browserslist": {
     "production": [
